# duckietown-cslam

01-graph-optimizer/: Dockerfile  docker-compose.yaml  get_watchtowers_ready.sh
01-graph-optimizer/ros/src/localization/config/: watchtowers.yaml
01-graph-optimizer/ros/src/localization/launch/: localization.launch
01-graph-optimizer/ros/src/localization/src/: localization_node.py
01-graph-optimizer/ros/src/pose_graph_builder/data/: apriltagsDB_custom.yaml
01-graph-optimizer/ros/src/pose_graph_builder/launch/: graph_builder.launch
01-graph-optimizer/ros/src/pose_graph_builder/params/: default_params.yaml
01-graph-optimizer/ros/src/pose_graph_builder/scripts/: transform_listener_ros.py
01-graph-optimizer/ros/src/waypoint_markers/: CMakeLists.txt  package.xml  setup.py
01-graph-optimizer/ros/src/waypoint_markers/src/: waypoint_marker.py
