<?xml version="1.0"?>
<package>
  <name>waypoint_markers</name>
  <version>0.10.3</version>
  <description>The waypoint_markers package</description>

  <maintainer email="hattelaa@student.ethz.ch">Alexander Hatteland</maintainer>

  <license>ETH</license>

  <author >Alexander Hatteland</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>duckietown_visualization</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>duckietown_visualization</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>